applications/fotobudka/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fotobudka
  namespace: fotobudka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fotobudka
  template:
    metadata:
      labels:
        app: fotobudka
    spec:
      securityContext:
        fsGroup: 1000

      containers:
        - name: fotobudka
          image: python:3.12-slim
          command:
            - /bin/sh
            - -c
            - |
              /venv/bin/gunicorn --bind 0.0.0.0:8080 --workers 2 app:app
          workingDir: /app

          ports:
            - containerPort: 8080

          volumeMounts:
            - name: app
              mountPath: /app/app.py
              subPath: app.py
              readOnly: true
            - name: data
              mountPath: /data
            - name: venv
              mountPath: /venv

          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 700m
              memory: 1Gi

          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL

      volumes:
        - name: app
          configMap:
            name: fotobudka-app
        - name: data
          persistentVolumeClaim:
            claimName: fotobudka-data
        - name: venv
          emptyDir: {}
