applications/fotobudka/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fotobudka
  namespace: fotobudka
spec:
  selector:
    app: fotobudka
  ports:
    - name: http
      port: 80
      targetPort: 8080
